--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,12 +10,14 @@
 @import './base/grid';
 
 // Modules
-@import './modules/header';
-@import './modules/footer';
+// @import './modules/header';
+// @import './modules/footer';
 @import './modules/headline';
-@import './modules/section';
+// @import './modules/section';
 @import './modules/link';
 @import './modules/list';
-@import './modules/accordion';
+// @import './modules/accordion';
+@import './modules/sidebar';
+@import './modules/content';
 
 @import './modules/utils';
