--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -16,3 +16,19 @@ body {
   background-color: $light-color;
   overflow-x: hidden;
 }
+
+.main {
+  padding: 64px 0;
+
+  &:before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-image: url(../img/img_profile.jpg);
+    background-size: 100%;
+    filter: blur(30px) grayscale(20%);
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+}
